# group_inviter

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  setup.sh
config/: config.yaml.example  invalid_token.yaml
monitoring/grafana/dashboards/: group-inviter-logs.json
monitoring/grafana/provisioning/alerting/: bot-health.yaml  contact-points.yaml.tmpl  notification-policies.yaml
monitoring/grafana/provisioning/contact-points/: telegram.yaml.tmpl
monitoring/grafana/provisioning/dashboards/: provider.yml
monitoring/grafana/provisioning/datasources/: loki.yml  prometheus.yml
monitoring/grafana/provisioning/notification-policies/: default.yaml
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: promtail.yml
scripts/: configure_grafana_contact_point.sh
src/group_inviter/: __init__.py  __main__.py  bot.py  configuration.py  database.py  logging_config.py  main.py  metrics.py
src/group_inviter/handlers/: __init__.py  _helpers.py  errors.py  invite.py  lifecycle.py  start.py  texts.py
src/group_inviter/middlewares/: __init__.py  update_dump.py
tests/: test_bot.py  test_invite_handler.py  test_logging_config.py  test_main.py  test_update_dump_middleware.py
